# aperture-mcp

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.zh-CN.md  LICENSE  MANIFEST.in  README.md  README.zh-CN.md  SECURITY.md  VERSIONING.md  llms.txt  pyproject.toml  server.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug-report.md  config.yml  drift-case-report.md
.github/workflows/: ci.yml  publish.yml
conformance/: __init__.py  runner.py
conformance/fixtures/: access_layer_bad_anchor_kind_rejected.json  access_layer_passthrough.json  access_layer_tool_set_and_schema.json  access_layer_valid_anchor_kind_admitted.json  anchor_violation_aggregation_surface_bind.json  anchor_violation_anchor_kind_all_valid.json  anchor_violation_anchor_reject_extra_top_level.json  anchor_violation_goal_baseline_degraded.json  anchor_violation_reject_rich_payload.json  anchor_violation_shape_required.json  delta_history_compare_not_implicit_write.json  delta_history_similar_context_exact_structural.json  delta_history_tombstone_reason_filter.json  instrumentation_event_echo_compare.json  reason_presence_degraded.json  reason_presence_provider_unavailable.json  self_consistency_commitment_implicit_drop.json  self_consistency_family_profile_non_ok.json  self_consistency_family_profile_ok.json  self_consistency_proposal_drift.json  self_consistency_provider_family_not_profile.json  self_consistency_stance_reversal.json  status_enum_all_eight_valid.json  status_enum_boundary_ok.json  status_enum_reject_case_drift.json  status_enum_reject_tagged_payload.json  three_new_values_blocked_constraint_anchor.json  three_new_values_dropped_commitment_anchor.json  three_new_values_paused_reserved_not_originated.json  three_new_values_paused_wire_receivable.json  topology_degenerate_ok_empty.json  topology_g1a_no_rich_fields.json  topology_projection_structural_subset.json  topology_supported_metric_only_cut_vertices.json  topology_unsupported_metric_provider_unavailable.json  wire_shape_c4_adapter_required_valid.json  wire_shape_compare_signature_two_arg_anchors.json  wire_shape_native_minimal_keys.json
docs/: measured-limits.md
examples/git_decision_drift/: .aperture.toml.example  README.md  git_decision_drift.py
examples/git_decision_drift/fixtures/: decision_after.md  decision_before.md
examples/github-action/: aperture-check.yml
examples/hooks/: README.md  pre-commit
src/aperture/: __init__.py  c4_wire.py  calibration.py  cli.py  core.py  delta_history.py  errors.py  mcp_server.py  metrics.py  openai_schema.py  registry.py  topology.py
tests/: test_cli_check.py  test_smoke.py
